--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@ h1{
 }   
 
 .main{
-    /* position: relative; */
+    position: relative;
     text-align: center;  
-    /* top: 120px; */
+    top: 120px;
     padding: 40px;
     border-radius: 20px;
-    /* left: 700px; */
+    left: 700px;
     width: 500px;
     background-color: whitesmoke;
 }
